@@ -72,6 +72,12 @@ public class POIFSContainerDetector implements Detector {
      * Graph/Charts embedded in PowerPoint and Excel
      */
     public static final MediaType MS_GRAPH_CHART = application("vnd.ms-graph");
+
+    /**
+     * Equation embedded in Office docs
+     */
+    public static final MediaType MS_EQUATION = application("vnd.ms-equation");
+
     /**
      * Microsoft Excel
      */
@@ -300,6 +306,8 @@ public class POIFSContainerDetector implements Detector {
                 }
             } else if (names.contains("NativeContent_MAIN")) {
                 return new MediaType(QUATTROPRO, "version", "9"); // .qpw
+            } else if (names.contains("Equation Native")) {
+                return MS_EQUATION;
             } else {
                 for (String name : names) {
                     if (name.startsWith("__substg1.0_")) {
